# CandorFlow

./: .gitignore  LICENSE  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
candorflow/: __init__.py  demo.py  lambda_metric.py  stability_controller.py  utils.py  version.py
examples/: CandorFlow_Demo.ipynb  demo_plots.py  demo_training_loop.py  run_demo.py
notebooks/: CandorFlow_Demo.ipynb
plots/: .gitkeep
