[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candorflow"
version = "0.1.2"
description = "Training stability tools (public CandorFlow Lite demo)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Matt Gehring", email = "matt@candorprotocol.com" }
]
dependencies = [
  "torch",
  "matplotlib",
  "numpy"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["candorflow*"]
